Sun Dec  3 12:24:16 PST 2006 (adam)
	Fixed things so that not having a Serialization module returns 415.
	Fixed things so that failure to Deserialize sends the proper status.
	Refactored the Plugin loading to Catalyst::Action::SerializeBase.
	Updated the Documentation.
	Added a whole raft of serializers. (JSON, all the Data::Serializer
	  supported ones, and XML::Simple)
	Added test cases.

Thu Nov 30 23:51:04 PST 2006 (adam)
	Refactored the Catalyst::Action::REST dispatch, so that the default
	  method is called before any _METHOD handlers.  In addition, moved
	  the 405 Not Implemented handler to be foo_not_implemented, instead
	  of the default sub.  (daisuke++ pointed out the inconsistency and
	  provided a patch, and I added the foo_not_implemented support)

	Added in automated OPTIONS handler, which constructs the allow
	  header for you, just like the 405 handler.  Can be overridden
	  with a normal _METHOD sub.

	Refactored Test::Rest, so that it uses closures to create the
	  very similar $test->method() subs.

	Added tests for Catalyst::Action::REST.

Thu Nov 30 17:14:51 PST 2006 (adam) - Release 0.2
	Added documentation patch from Daisuke Maki (daisuke@endeworks.jp)
	Added dependency patch from Daisuke Maki (daisuke@endeworks.jp)

Sun Nov 19 16:24:20 PST 2006 (adam) - Release 0.1
	Added status_accepted (Code 202)
	Added a first pass at documentation.

Mon Oct 16 14:48:54 PDT 2006 (adam)
	Added in Test Suite
	Created Catalyst::Action::Serialize and Catalyst::Action::Deserialize
	Added Data::Serializer actions
	Added status_created helper method

Wed Oct 18 17:29:07 PDT 2006 (adam)
	Added more status_ helpers

Thu Oct 19 16:04:33 PDT 2006 (adam)
	Converted error helpers to return an object instead of plain-text.  It's
	  a more consistent model than a text/plain error message.
	Added logging to 4xx status handlers
