@@ -12,6 +12,31 @@ requires('Module::Pluggable::Object' => undef);
 requires('LWP::UserAgent'            => '2.033');
 requires('Data::Serializer'          => '0.36');
 requires('Class::Inspector'          => '1.13');
+requires('URI::Find'                 => undef);
+
+feature 'Data::Denter (text/x-data-denter) support',
+    -default => 0,
+    'Data::Denter' => undef;
+
+feature 'Data::Taxi (text/x-data-taxi) support',
+    -default => 0,
+    'Data::Taxi' => undef;
+
+feature 'Config::General (text/x-config-general) support',
+    -default => 0,
+    'Config::General' => undef;
+
+feature 'PHP::Serialization (text/x-php-serialization) support',
+    -default => 0,
+    'PHP::Serialization' => undef;
+
+feature 'FreezeThaw (application/x-freezethaw) support',
+    -default => 0,
+    'FreezeThaw' => undef;
+
+feature 'XML::Simple (text/xml) support',
+    -default => 0,
+    'XML::Simple' => undef;
 
 auto_include;
 auto_install;
